...
              padding: const EdgeInsets.symmetric(horizontal: 16),
              decoration: BoxDecoration(
                color: Colors.white,
                borderRadius: BorderRadius.circular(12),
              ),
              child: TextField(
                key: Key('search_text_field'),
                decoration: const InputDecoration(
                  icon: Icon(Icons.search),
                  hintText: 'Search payments',
                  border: InputBorder.none,
                ),
              ),
...
